# RustSimpleGTKQrCodeViewer

./: README.md
data/: meson.build  org.simon.qr_code_shower.appdata.xml.in  org.simon.qr_code_shower.desktop.in  org.simon.qr_code_shower.gschema.xml
po/: meson.build
src/: config.rs  main.rs  meson.build  qrcode_shower.gresource.xml  window.rs
